# finality_sequencer

./: Cargo.toml
cairo_program/: abs_value_array.json
src/: cairo.rs  halo2.rs  main.rs  schnorr.rs
